--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
 	<div class='row'>
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">ASILOMAR, 2022</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">ASILOMAR, 2022</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
@@ -360,7 +360,7 @@
 	    </div>
 		
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">AdvML@KDD, 2022</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">AdvML@KDD, 2022</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Coupling Adversarial Learning with Selective Voting Strategy for Distribution Alignment in Partial Domain
@@ -369,7 +369,7 @@
 	    </div>
 
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">GLOBECOM, 2021</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">GLOBECOM, 2021</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Optimal Cost Network Design for Bounded Delay Data Transfer from PMU to Control Center</strong></p>
@@ -377,7 +377,7 @@
 	    </div>
 		
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">DRCN, 2020</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">DRCN, 2020</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Structural Dependency Aware Service Chain Mapping for Network Function Virtualization</strong></p>
@@ -385,7 +385,7 @@
 	    </div>
 		
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">ASILOMAR, 2020</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">ASILOMAR, 2020</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Partial Domain Adaptation Using Selective Representation Learning For Class-Weight Computation</strong></p>
@@ -393,7 +393,7 @@
 	    </div>
 	
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">RMLDA, 2019</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">RMLDA, 2019</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Combining Multilevel Contexts of Superpixel using Convolutional Neural Networks to Perform Natural
@@ -402,7 +402,7 @@
 	    </div>
 
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">epiDAMIK@KDD, 2018</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">epiDAMIK@KDD, 2018</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Identification of At-Risk Groups for Opioid Addiction Through Web Data Analysis</strong></p>
@@ -410,7 +410,7 @@
 	    </div>
 	
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">MMTC, 2018</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">MMTC, 2018</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>User Satisfaction-Driven Bandwidth Allocation for Image Transmission in a Crowded Environment</strong></p>
@@ -418,7 +418,7 @@
 	    </div>
 
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">IJPRAI, 2018</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">IJPRAI, 2018</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Object Localization on Natural Scenes: A Survey</strong></p>
@@ -426,7 +426,7 @@
 	    </div>
 
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">FICTA, 2017</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">FICTA, 2017</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>A Quality-Concordance Metric Based Contour Detection by Utilizing Composite-Cue Information and
@@ -435,7 +435,7 @@
 	    </div>
 		
 	    <div class="col-md-2">
-	      <h3 style="font-size:2vw">ICACCI, 2016</h3>
+	      <h3 style="text-align:right;font-size:1.3vw">ICACCI, 2016</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>A Multi-Cue Information Based Approach to Contour Detection by Utilizing Superpixel Segmentation</strong></p>
