--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 	      <h3 style="text-align:center;font-size:1.1vw">ASILOMAR<br>2022</h3>
 	    </div>
 	    <div class="col-md-10">
-	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
+	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation [accepted]</strong></p>
 	      <p><em>S.Choudhuri, S. Adeniye, H Venkateswara, A.Sen</em></p>
 	    </div>
 		
