--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
-        <p class="lead mb-5">In case if you like to contact me, drop me a mail or find me through the links below.
+        <p class="lead mb-5">In case you like to know more or get in touch, drop me a mail or find me through the links below.
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sandipan-choudhuri-760aa7125">
