--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
 	<div class='row'>
+	    <h2 class="mb-5">Publications</h2>
 	    <div class="col-md-2">
 	      <h3 style="text-align:center;font-size:1.1vw">ASILOMAR<br>2022</h3>
 	    </div>
