--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
+	<div class="w-100">
 	<h2 class="mb-5">Publications</h2>
 	<div class='row'>
 	    <div class="col-md-2">
@@ -443,6 +444,7 @@
 	      <p><em>S Choudhuri, N Das, S Ghosh, M Nasipuri</em></p>
 	    </div>
 		
+	</div>
 	</div>
     </section>
 
