--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
           <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#coursework">Coursework</a>
-        </li>
-	<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="./CV_Sandipan_Choudhuri.pdf">CV</a>
         </li>
       </ul>
@@ -549,7 +546,7 @@
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="coursework">
+    <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="coursework">
       <div class="w-100">
         <h2 class="mb-5">Relevant Courses</h2>
 
@@ -570,7 +567,7 @@
 	    </p>
 
       </div>
-    </section>
+    </section>-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
