--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the Opioid Response project at ASU, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a framework for estimating future opioid overdose incidence volumes over a geographic region and strategically determining optimal locations for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a pipeline for automatic characterization of opioid-related tweets (using RoBERTa) and evaluating their effectiveness as a viable indicator of overdose incidence volume change; a framework for detecting illicit online opioid sales is currently underway.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a pipeline for automatic characterization of opioid-related tweets (using RoBERTa language model) and evaluating their effectiveness as a viable indicator of overdose incidence volume change; a framework for detecting illicit online opioid sales is currently underway.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -415,9 +415,9 @@
           <div class="resume-content">
             <h3 class="mb-0">DOMAIN ADAPTATION FRAMEWORKS</h3>
             <div class="subheading mb-3"></div>
-		  <div style="text-align: justify;">Developed frameworks for image classification tasks under a domain adaptation setup, with constrained and unconstrained label-space
-                       assumptions between the source and target domains (closed-set, partial and open-set scenarios). Built adaptation models for tasks
-                       where access to source data is prohibited during the adaptation process (source-free scenario). Developed generative models for image to-image translation and data augmentation tasks.
+		  <div style="text-align: justify;">Developed frameworks for classification tasks under a domain adaptation setup, with constrained and unconstrained label-space as-
+sumptions between the source and target domains (closed-set, partial and open-set scenarios); built adaptation models for scenarios
+where access to source data is prohibited during the adaptation process (source-free scenario); developed generative models for cross-domain translation and data augmentation tasks.
 		  </div>
           </div>
           <div class="resume-date text-md-right">
@@ -430,10 +430,10 @@
             <h3 class="mb-0">OBJECT LOCALIZATION</h3>
             <div class="subheading mb-3"></div>
 		  <div style="text-align: justify;">Formulated an approach for object localization and semantic image segmentation in natural scenes, using image super-pixelization and
-                       deep supervised classification. Context-based information is captured through patches formed by the first and second neighbors superpixels 
-		       (atomic units of an image formed by a perceptual grouping of pixels). These are then mapped to the corresponding object labels
-                       using deep classifier networks. A consensus-based labeling strategy is subsequently employed by ensembling the output probabilities
-                       at different scales through multiple voting routines.
+deep supervised classification. Context-based information is captured through patches formed by the first and second neighbor super-pixels (atomic units of an image formed by a perceptual 
+grouping of pixels). These are then mapped to the corresponding object labels using deep classifier networks. A consensus-based labeling strategy is subsequently employed by ensembling the output probabilities
+at different scales through multiple voting routines.
+
 		  </div>
 		  
           </div>
@@ -446,10 +446,10 @@
           <div class="resume-content">
             <h3 class="mb-0">DEEPVID++</h3>
             <div class="subheading mb-3"></div>
-            <div style="text-align: justify;">The reliability of a deep-learningmodel is majorly dependent on the interpretability of its internal operations. Citing this,the DeepVID
-                 framework is improved to train a basic network using a complex deep-neural model such that its behavior is visually interpretable.
-                 This is accomplished by utilizing variational information to generate neighbors around data instances and training a linear network to
-                 replicate the complex network’s behavior on the generated samples through knowledge distillation.
+            <div style="text-align: justify;">The reliability of a deep-learning model is majorly dependent on the interpretability of its internal operations. Citing this, the DeepVID
+framework is improved to train a basic network using a complex deep-neural model such that its behavior is visually interpretable.
+This is accomplished by utilizing variational information to generate neighbors around data instances and training a linear network to
+replicate the complex network’s behavior on the generated samples through knowledge distillation.
 	    </div>
           </div>
           <div class="resume-date text-md-right">
@@ -461,9 +461,10 @@
           <div class="resume-content">
             <h3 class="mb-0">POLYP SEGMENTATION </h3>
             <div class="subheading mb-3"></div>
-            <div style="text-align: justify;">Developed a polyp segmentation framework by coupling deep-siamese networks with a clustering policy using balanced entropy-based
-                 random walks to identify informative frames from optical colonoscopic video sequences and segment out existing polyps (precursors
-                 to colon cancer).
+            <div style="text-align: justify;">Developed a framework for polyp segmentation in optical colonoscopic 
+		    video sequences by coupling deep-siamese networks with a clustering policy using balanced entropy-based 
+		    random walks to identify informative frames and segment out existing polyps (precursors to
+colon cancer).
 	    </div>
           </div>
           <div class="resume-date text-md-right">
@@ -476,9 +477,9 @@
             <h3 class="mb-0">SEMANTIC CONTOUR DETECTION</h3>
             <div class="subheading mb-3"></div>
             <div style="text-align: justify;">A multi-scale feature-based contour detection approach is presented here from a game-theoretic standpoint. A mixed strategy Nash
-                 Equilibrium is searched in a two-player game (texture and color-based feature extractors acting as players, with strategies involving
-                 extraction at different scales). The objective centers around finding a weighted balance ofthese strategies to minimize the false positives
-                 (highlighting spurious edges) and false negatives (missing salient contours).
+						Equilibrium is searched in a two-player game (texture and color-based feature extractors acting as players, with strategies involving
+						extraction at different scales). The objective centers around finding a weighted balance of these strategies to minimize the false positives
+						(highlighting spurious edges) and false negatives (missing salient contours).
 	    </div>
           </div>
           <div class="resume-date text-md-right">
