--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Formulated and developed a machine-learning pipeline using Azure Form-Recognizer Service and open-source libraries to streamline extraction of clinical information from scanned records of semi-structured non-electronic healthcare documents.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Designed and developed a machine-learning pipeline using Azure Form-Recognizer Service and field-value extractor routines
+to streamline layout-agnostic extraction of clinical information from scanned records of semi-structured healthcare documents.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed an efficient module for keyword search in scanned documents using Azure Cognitive Services.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built Python RESTful APIs and deployed them on the Azure App Services with Docker runtime.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Automated different stages of a deal pipeline in HubSpot; designed modules in HubSpot ticketing for monitoring support request response sessions; devised an automated contract filling system through the integration of PandaDoc with HubSpot.</il>
@@ -132,9 +133,10 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a multi-modal data processing architecture for detecting automotive estimate types and extracting structured information from the scanned estimates using Google Document AI, Google Cloud Vision API, and open-source libraries.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a multi-modal data processing architecture for detecting vehicular estimate categories and extracting structured
+information from the scanned estimates using Google Document AI, Google Cloud Vision API, and entity detection modules.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built Google Cloud Web Application services with OAuth 2.0 framework authentication (conforming to the HIPAA security and privacy requirements) for accessing and processing healthcare documents from Google Drive and Google Cloud Storage.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Created a form-parsing engine for health insurance claim forms, using Google Cloud Vision API and open-source libraries.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Created a form-parsing engine for health insurance claim forms using Google Cloud Vision API and key-value pair extractors.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Interacted with the stakeholders for requirements gathering, workflow designing, data processing, and documentation.</il>
 	    </ul>
 	  </div>
