--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@ information from the scanned estimates using Google Document AI, Google Cloud Vi
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Notable Projects</h2>
+	   
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -420,6 +421,21 @@ information from the scanned estimates using Google Document AI, Google Cloud Vi
 		  <div style="text-align: justify;">Developed frameworks for classification tasks under a domain adaptation setup, with constrained and unconstrained label-space as-
 sumptions between the source and target domains (closed-set, partial and open-set scenarios); built adaptation models for scenarios
 where access to source data is prohibited during the adaptation process (source-free scenario); developed generative models for cross-domain translation and data augmentation tasks.
+		  </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Python, Pytorch, Keras, Adversarial Learning</span>
+          </div>
+        </div>
+	      
+	<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">TIME-SERIES ANALYSIS</h3>
+            <div class="subheading mb-3"></div>
+		  <div style="text-align: justify;">Developed a pipeline for predicting opioid overdose incidence volumes in a future time frame using time-series analysis and forecasting.
+			  Responsibilities involved time-series decomposition, stationarity testing using unit-root tests, transforming the time series to stationary, testing for seasonality, 
+			  addressing missing values, computing partial autocorrelation, estimating the series forecastability, running Granger Causality tests
+			  to gauge the effectiveness of the time series in forecasting another, and developing forecasting models using ARIMA, SARIMA, SARIMAX, VARMA, and VARMAX.
 		  </div>
           </div>
           <div class="resume-date text-md-right">
