--- a/index.html
+++ b/index.html
@@ -432,10 +432,11 @@ where access to source data is prohibited during the adaptation process (source-
           <div class="resume-content">
             <h3 class="mb-0">TIME-SERIES ANALYSIS</h3>
             <div class="subheading mb-3"></div>
-		  <div style="text-align: justify;">Developed a pipeline for predicting opioid overdose incidence volumes in a future time frame using time-series analysis and forecasting.
-			  Responsibilities involved time-series decomposition, stationarity testing using unit-root tests, transforming the time series to stationary, testing for seasonality, 
-			  addressing missing values, computing partial autocorrelation, estimating the series forecastability, running Granger Causality tests
-			  to gauge the effectiveness of the time series in forecasting another, and developing forecasting models using ARIMA, SARIMA, SARIMAX, VARMA, and VARMAX.
+		  <div style="text-align: justify;">Developed a pipeline for predicting opioid overdose incidence volumes in a future time frame using time-series analysis and forecasting
+							over Arizona EMS records and demographic data. Tasks involved time-series decomposition, stationarity testing using unit-root tests,
+							transforming the time series to stationary, testing for seasonality, addressing missing values, computing partial autocorrelation and
+							estimating the series forecastability, running Granger Causality tests to gauge the effectiveness of the time series in forecasting another,
+							and developing forecasting models using ARIMA, SARIMA, SARIMAX, VARMA, and VARMAX.
 		  </div>
           </div>
           <div class="resume-date text-md-right">
