--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ information from the scanned estimates using Google Document AI, Google Cloud Vi
             <h3 class="mb-0">Research Assistant</h3>
             <div class="subheading mb-3">NetXT LAB, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the Opioid Response project at ASU, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the State Opioid Response project, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a framework for estimating future opioid overdose incidence volumes over a geographic region and strategically determining optimal locations for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a pipeline for automatic characterization of opioid-related tweets (using RoBERTa language model) and evaluating their effectiveness as a viable indicator of overdose incidence volume change; a framework for detecting illicit online opioid sales is currently underway.</il>
 	    </ul>
