--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Designed and developed a machine-learning pipeline using Azure Form-Recognizer Service and field-value extractor routines
-to streamline layout-agnostic extraction of clinical information from scanned records of semi-structured healthcare documents.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed an efficient module for keyword search in scanned documents using Azure Cognitive Services.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built Python RESTful APIs and deployed them on the Azure App Services with Docker runtime.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Automated different stages of a deal pipeline in HubSpot; designed modules in HubSpot ticketing for monitoring support request response sessions; devised an automated contract filling system through the integration of PandaDoc with HubSpot.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a layout-agnostic framework for seamless extraction of client-focused attributes from scanned patient intake forms,
+using Azure Form Recognizer Service and image-processing routines, with 92% entity extraction accuracy.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an efficient word search module for scanned records, with Azure Cognitive Service to expedite the patient intake process.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for increased productivity by automating stages in deal pipelines, building ticketing system add-
+ons for analyzing support responses to find actionable insights, and automating contract filling through PandaDoc integration.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -133,11 +134,12 @@ to streamline layout-agnostic extraction of clinical information from scanned re
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a multi-modal data processing architecture for detecting vehicular estimate categories and extracting structured
-information from the scanned estimates using Google Document AI, Google Cloud Vision API, and entity detection modules.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built Google Cloud Web Application services with OAuth 2.0 framework authentication (conforming to the HIPAA security and privacy requirements) for accessing and processing healthcare documents from Google Drive and Google Cloud Storage.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Created a form-parsing engine for health insurance claim forms using Google Cloud Vision API and key-value pair extractors.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Interacted with the stakeholders for requirements gathering, workflow designing, data processing, and documentation.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 45% through the development of category detectors and
+form-processors for the scanned estimates, using Google Document AI, Google Cloud Vision API, and deep-siamese networks.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a form parser for health insurance claims with Google Cloud Vision API and field-value pair extractors, yielding 94%
+extraction accuracy. Communicated with the stakeholders for requirements gathering, workflow designing, and documentation.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a Google Cloud Web Application with OAuth 2.0 framework authentication (conforming to HIPAA security and privacy
+standards) for secured access to healthcare documents from Google Drive and Google Cloud Storage.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -150,9 +152,11 @@ information from the scanned estimates using Google Document AI, Google Cloud Vi
             <h3 class="mb-0">Research Assistant</h3>
             <div class="subheading mb-3">NetXT LAB, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the State Opioid Response project, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a framework for estimating future opioid overdose incidence volumes over a geographic region and strategically determining optimal locations for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a pipeline for automatic characterization of opioid-related tweets (using RoBERTa language model) and evaluating their effectiveness as a viable indicator of overdose incidence volume change; a framework for detecting illicit online opioid sales is currently underway.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developing predictive models for Arizona Health Care Cost Containment System (AHCCCS) to combat the state’s opioid crisis.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an engine for forecasting future opioid overdose incidence volumes over a geographic region and strategically determining
+optimal locations (demand points) for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Evaluated the effectiveness of Twitter data as a viable indicator of opioid overdose incidences by developing a pipeline for their
+characterization and analysis (using RoBERTa). A framework for detecting illicit online opioid sales is currently underway.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -165,8 +169,10 @@ information from the scanned estimates using Google Document AI, Google Cloud Vi
             <h3 class="mb-0">Junior Research Fellow</h3>
             <div class="subheading mb-3">CMATER LAB, India</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for the Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties included research and development, communicating with the expert groups at diagnostic units, and the project managementteam at Jadavpur University forrequirements gathering, data acquisition, and configuring access controls.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted research and developed models for vision tasks: Object Localization, Semantic Contour Detection and Image Segmentation on natural scene (BSDS500, PASCAL-VOC, Stanford B.) and near-Infrared image (RGB-NIR Scene) datasets.</il>    
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for the Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved research and development, communicating with the expert groups at diagnostic units, and the
+project management team at Jadavpur University for requirements gathering, data acquisition, and configuring access controls.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on challenges of Object Localization, Semantic Contour Detection, and Image Segmentation.
+Addressed them by proposing novel machine-learning frameworks for RGB and near-infrared images and publishing findings.</il>    
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
