--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ characterization and analysis (using RoBERTa). A framework for detecting illicit
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for the Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved research and development, communicating with the expert groups at diagnostic units, and the
 project management team at Jadavpur University for requirements gathering, data acquisition, and configuring access controls.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on challenges of Object Localization, Semantic Contour Detection, and Image Segmentation.
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on the challenges of Object Localization, Semantic Contour Detection, and Image Segmentation.
 Addressed them by proposing novel machine-learning frameworks for RGB and near-infrared images and publishing findings.</il>    
 	    </ul>
 	  </div>
