--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a layout-agnostic framework for seamless extraction of client-focused attributes from scanned patient intake forms,
-using Azure Form Recognizer Service and image-processing routines, with 92% entity extraction accuracy.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form Recognizer Service and image-processing routines to develop a layout-agnostic framework for seamless
+extraction of requirement-centric attributes from scanned patient intake forms, with 92% entity extraction accuracy.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an efficient word search module for scanned records, with Azure Cognitive Service to expedite the patient intake process.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for increased productivity by automating stages in deal pipelines, building ticketing system add-
