--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form Recognizer Service and image-processing routines to develop a layout-agnostic framework for seamless
-extraction of requirement-centric attributes from scanned patient intake forms, with 92% entity extraction accuracy.</il>
+extraction of requisite entities from scanned patient intake forms, with 92% average accuracy.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an efficient word search module for scanned records, with Azure Cognitive Service to expedite the patient intake process.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for increased productivity by automating stages in deal pipelines, building ticketing system add-
-ons for analyzing support responses to find actionable insights, and automating contract filling through PandaDoc integration.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity by building ticketing system add-ons to analyze support requests for actionable insights, automating contract filling through PandaDoc integration, and creating workflows in deal pipelines.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -134,10 +133,10 @@ ons for analyzing support responses to find actionable insights, and automating 
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 45% through the development of category detectors and
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a batch-parser for poorly-digitized health insurance claim forms with Google Cloud Vision API and region-proposal
+networks, that yielded an extraction accuracy of 94% and boosted the process-pipeline throughput by 82%.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 75% through the development of category detectors and
 form-processors for the scanned estimates, using Google Document AI, Google Cloud Vision API, and deep-siamese networks.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a form parser for health insurance claims with Google Cloud Vision API and field-value pair extractors, yielding 94%
-extraction accuracy. Communicated with the stakeholders for requirements gathering, workflow designing, and documentation.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a Google Cloud Web Application with OAuth 2.0 framework authentication (conforming to HIPAA security and privacy
 standards) for secured access to healthcare documents from Google Drive and Google Cloud Storage.</il>
 	    </ul>
@@ -152,9 +151,9 @@ standards) for secured access to healthcare documents from Google Drive and Goog
             <h3 class="mb-0">Research Assistant</h3>
             <div class="subheading mb-3">NetXT LAB, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developing predictive models for Arizona Health Care Cost Containment System (AHCCCS) to combat the state’s opioid crisis.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an engine for forecasting future opioid overdose incidence volumes over a geographic region and strategically determining
-optimal locations (demand points) for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developing predictive models for Arizona Health Care Cost Containment System (AHCCCS) to combat state’s opioid crisis.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an engine for forecasting future overdose incidence volumes and strategically determining optimal locations (demand points)
+to aid the AHCCCS personnel in setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Evaluated the effectiveness of Twitter data as a viable indicator of opioid overdose incidences by developing a pipeline for their
 characterization and analysis (using RoBERTa). A framework for detecting illicit online opioid sales is currently underway.</il>
 	    </ul>
@@ -169,10 +168,10 @@ characterization and analysis (using RoBERTa). A framework for detecting illicit
             <h3 class="mb-0">Junior Research Fellow</h3>
             <div class="subheading mb-3">CMATER LAB, India</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for the Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved research and development, communicating with the expert groups at diagnostic units, and the
-project management team at Jadavpur University for requirements gathering, data acquisition, and configuring access controls.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on the challenges of Object Localization, Semantic Contour Detection, and Image Segmentation.
-Addressed them by proposing novel machine-learning frameworks for RGB and near-infrared images and publishing findings.</il>    
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for a production-level Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved conducting research and evaluation, mentoring the development team, communicating
+with the expert groups at diagnostic units for requirements gathering, data acquisition, and configuring access controls.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on challenges of Object Localization, Contour Detection, and Image Segmentation. Addressed
+them by proposing novel machine-learning frameworks for RGB and near-infrared image datasets and publishing findings.</il>    
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
