--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form Recognizer Service and image-processing routines to develop a layout-agnostic framework for seamless
-extraction of requisite entities from scanned patient intake forms, with 92% average accuracy.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an efficient word search module for scanned records, with Azure Cognitive Service to expedite the patient intake process.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form-Recognizer and image-processing routines to develop a framework for seamless extraction of requisite
+entities from scanned patient intake forms with 92% accuracy, expediting the decision-making process for patient intake by 64%.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Solved the issue of finding keywords in scanned patient records by building a word search module with Azure Cognitive Service.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity by building ticketing system add-ons to analyze support requests for actionable insights, automating contract filling through PandaDoc integration, and creating workflows in deal pipelines.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity: built ticketing system add-ons to analyze support 
+			    requests for actionable insights, automated contract filling through PandaDoc integration, and created workflows in deal pipelines.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -134,8 +135,8 @@ extraction of requisite entities from scanned patient intake forms, with 92% ave
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a batch-parser for poorly-digitized health insurance claim forms with Google Cloud Vision API and region-proposal
-networks, that yielded an extraction accuracy of 94% and boosted the process-pipeline throughput by 82%.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 75% through the development of category detectors and
+networks with an extraction accuracy of 96%, translating to an improvement in the process-pipeline throughput by 72%.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 49% through the development of category detectors and
 form-processors for the scanned estimates, using Google Document AI, Google Cloud Vision API, and deep-siamese networks.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a Google Cloud Web Application with OAuth 2.0 framework authentication (conforming to HIPAA security and privacy
 standards) for secured access to healthcare documents from Google Drive and Google Cloud Storage.</il>
