--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@ standards) for secured access to healthcare documents from Google Drive and Goog
             <h3 class="mb-0">Research Assistant</h3>
             <div class="subheading mb-3">NetXT LAB, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developing predictive models for Arizona Health Care Cost Containment System (AHCCCS) to combat state’s opioid crisis.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built an engine for forecasting future overdose incidence volumes and strategically determining optimal locations (demand points)
-to aid the AHCCCS personnel in setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Evaluated the effectiveness of Twitter data as a viable indicator of opioid overdose incidences by developing a pipeline for their
-characterization and analysis (using RoBERTa). A framework for detecting illicit online opioid sales is currently underway.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Addressed the data annotation overhead by proposing transfer-learning frameworks with realistic label-set overlap assumptions
+that yielded state-of-the-art performance in the majority of adaption challenges on benchmark datasets.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed an engine for forecasting future overdose incidence volumes and strategically determining optimal locations to aid
+the Arizona Health Care Cost Containment System (AHCCCS) personnel in setting up Medically Assisted Treatment
+ (MAT) facilities under budgetary constraints; an initiative to combat state’s opioid crisis.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Evaluated the effectiveness of Twitter data to monitor the opioid crisis through characterization using RoBERTa language model.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
