--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ the Arizona Health Care Cost Containment System (AHCCCS) personnel in setting up
             <h3 class="mb-0">Junior Research Fellow</h3>
             <div class="subheading mb-3">CMATER LAB, India</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead for a production-level Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved conducting research and evaluation, mentoring the development team, communicating
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Technical lead in a production-level Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved conducting research and evaluation, mentoring the development team, communicating
 with the expert groups at diagnostic units for requirements gathering, data acquisition, and configuring access controls.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on challenges of Object Localization, Contour Detection, and Image Segmentation. Addressed
 them by proposing novel machine-learning frameworks for RGB and near-infrared image datasets and publishing findings.</il>    
