--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form-Recognizer and image-processing routines to develop a framework for seamless extraction of requisite
 entities from scanned patient intake forms with 92% accuracy, expediting the decision-making process for patient intake by 64%.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Created a keyword search feature on scanned patient records by building a word localizer module with Azure Cognitive Service.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a word localizer module using Azure Cognitive Service to render scanned patient data searchable for keywords.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity: built ticketing system add-ons to analyze support 
 			    requests for actionable insights, automated contract filling through PandaDoc integration, and created workflows in deal pipelines.</il>
+	      	    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
