--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form-Recognizer and image-processing routines to develop a framework for seamless extraction of requisite
 entities from scanned patient intake forms with 92% accuracy, expediting the decision-making process for patient intake by 64%.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a word localizer module using Azure Cognitive Service to render scanned patient data searchable for keywords.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Engineered a word localizer module using Azure Cognitive Service to render scanned patient data searchable for keywords.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity: built ticketing system add-ons to analyze support 
 			    requests for actionable insights, automated contract filling through PandaDoc integration, and created workflows in deal pipelines.</il>
 	      	    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
@@ -135,7 +135,7 @@ entities from scanned patient intake forms with 92% accuracy, expediting the dec
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a batch-parser for poorly-digitized health insurance claim forms with Google Cloud Vision API and region-proposal
-networks with an extraction accuracy of 96%, translating to an improvement in the process-pipeline throughput by 72%.</il>
+networks with an extraction accuracy of 96%, translating to an improvement in the turnaround time by 72%.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 49% through the development of category detectors and
 form-processors for the scanned estimates, using Google Document AI, Google Cloud Vision API, and deep-siamese networks.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a Google Cloud Web Application with OAuth 2.0 framework authentication (conforming to HIPAA security and privacy
