--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Greetings! I am a dedicated Ph.D. researcher at Arizona State University, collaborating closely with Dr. Arunabha Sen in the esteemed Laboratory for Networked Existence (NetXT Lab). A track record in Computer Vision, Image Processing, and Machine Learning has marked my academic journey. Presently, my research is primarily centered on exploring realistic Domain Adaptation scenarios for image classification, particularly those that involve varying degrees of shared label space assumptions between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Greetings! I am a Ph.D. researcher at Arizona State University, collaborating closely with Prof. Arunabha Sen in the esteemed Laboratory for Networked Existence (NetXT Lab). A track record in Computer Vision, Image Processing, and Machine Learning has marked my academic journey. Presently, my research is primarily centered on exploring realistic Domain Adaptation scenarios for image classification, particularly those that involve varying degrees of shared label space assumptions between domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
