--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="./CV_Sandipan_Choudhuri.pdf">CV</a>
+          <a class="nav-link js-scroll-trigger" href="./Sandipan_Choudhuri_CV.pdf">CV</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Professional Experience</a>
